Thu Aug 15 16:07:07 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* users.c (trivfs_S_io_pathconf): Implement function.

	* term.h (QUEUE_HIWAT, QUEUE_LOWAT): New macros.
	* main.c (main): Use these new macros to create inputq, rawq, and
	outputq.

Thu Aug 15 15:32:47 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* users.c (trivfs_S_file_check_access): Renamed from
	`trivfs_S_file_access'.

Mon Aug 12 11:04:28 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* term.h (CTRL_BIT): Correct value is 0x40, not 0x20.

	* munge.c (poutput): Compute tab width using the same loop
	strategy as output_character and output_width.

Thu Aug  8 17:16:06 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* munge.c (echo_char): Compute non-ctrl version of control
	character correctly.
	* term.h (CHAR_SOH): Delete macro.
	(CTRL_BIT): New macro.

Mon Jul 29 02:46:12 1996  Roland McGrath  <roland@baalperazim.frob.com>

	* munge.c (input_character): In LAST_LNEXT case, jump to `alldone'
	after putting the char on the queue.

Fri Jul 19 23:46:39 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* users.c (trivfs_S_file_access): Implement locally always
	returning all access.  Eventually, this needs to do the right
	thing when trivfs wises up wrt modes.

Tue Jul 16 20:49:29 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* users.c (trivfs_S_io_read): Bother to set atime when
 	appropriate.

	* users.c (trivfs_modify_stat): Fill in st->st_mode, st->st_uid,
	and st->st_gid ourselves.
	(trivfs_S_file_chown): New routine, to override trivfs default.
	(trivfs_S_file_chmod): Likewise.
	* main.c (main): Initialize term_owner, term_group, and term_mode.
	* term.h (term_owner, term_group, term_mode): New variables.

Thu Jun 20 16:45:57 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* devio.c (devio_abandon_physical_output): Don't do anything if
 	carrier is off.

Thu Jun 20 16:26:07 1996  Miles Bader  <miles@gnu.ai.mit.edu>
